--- a/bertytech/config.yaml
+++ b/bertytech/config.yaml
@@ -96,6 +96,10 @@ languages:
     languageName: Georgian
     languageCode: ka-KA
     locale: ka_KA
+  te:
+    languageName: Telugu
+    languageCode: te-TE
+    locale: te_TE
 
 params:
   #useSummaryIfNoDescription: true
