--- a/bertytech/package.json
+++ b/bertytech/package.json
@@ -7,20 +7,21 @@
     "doc": "docs"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.2",
-    "amphtml-validator": "^1.0.30",
-    "autoprefixer": "^9.7.6",
-    "cheerio": "^1.0.0-rc.3",
-    "glob": "^7.1.6",
-    "htmlnano": "^0.2.5",
-    "netlify-plugin-hugo-cache-resources": "^0.1.4",
-    "netlify-plugin-submit-sitemap": "^0.1.4",
-    "node-fetch": "^2.6.0",
-    "postcss-cli": "^7.1.0",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "amphtml-validator": "^1.0.35",
+    "autoprefixer": "^10.3.6",
+    "cheerio": "^1.0.0-rc.10",
+    "glob": "^7.2.0",
+    "htmlnano": "^1.1.1",
+    "netlify-plugin-hugo-cache-resources": "^0.2.1",
+    "netlify-plugin-submit-sitemap": "^0.2.3",
+    "node-fetch": "^2.6.5",
+    "postcss": "^8.3.8",
+    "postcss-cli": "^8.3.1",
     "postcss-import": "^12.0.1",
     "postcss-purifycss": "^1.1.0",
-    "postcss-replace": "^1.1.2",
-    "yaml": "^1.10.0"
+    "postcss-replace": "^1.1.3",
+    "yaml": "^1.10.2"
   },
   "browserslist": [
     "> 1%"
@@ -32,6 +33,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "sharp": "^0.27.0"
+    "sharp": "^0.27.2"
   }
 }
