--- a/bertytech/package.json
+++ b/bertytech/package.json
@@ -11,7 +11,6 @@
     "amphtml-validator": "^1.0.30",
     "autoprefixer": "^9.7.6",
     "cheerio": "^1.0.0-rc.3",
-    "glob": "^7.1.6",
     "htmlnano": "^0.2.5",
     "netlify-plugin-hugo-cache-resources": "^0.1.4",
     "netlify-plugin-submit-sitemap": "^0.1.4",
@@ -32,6 +31,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "fast-xml-parser": "^3.21.1",
+    "glob": "^7.2.0",
     "sharp": "^0.27.0"
   }
 }
